--- a/src/main/static/public/templates/index.jade
+++ b/src/main/static/public/templates/index.jade
@@ -3,9 +3,9 @@ html
     head
         title=pageName
     body
-        form(name="searchbook", action="/books/search", method="post")
+        form(name="searchbook", action="/books/search", method="get")
             span Search
-            input(type="text", name="criteria")
+            input(type="text", name="criteria", value=criteria)
             input(type="submit", value="Search")
 
         ul#books
