Back to all books link added to Add book page

--- a/src/main/static/public/templates/createbook.jade
+++ b/src/main/static/public/templates/createbook.jade
@@ -18,3 +18,6 @@ html
                 dd: input(type="checkbox", checked, name="available")
             div
                 input(type="submit", value="Add book")
+
+        div
+            p: a(href="/books") Back to all books
