--- a/src/main/static/public/templates/bookdetails.jade
+++ b/src/main/static/public/templates/bookdetails.jade
@@ -3,6 +3,8 @@ html
     head
         title=pageName
     body
+        div
+            span: a(href="/") Home
 
         dl
             dt Id:
@@ -17,5 +19,3 @@ html
             dt Price:
             dd='£' + book.price
 
-        div
-            span: a(href="/books") All books
