--- a/src/main/static/public/templates/index.jade
+++ b/src/main/static/public/templates/index.jade
@@ -5,7 +5,7 @@ html
     body
         p: span Your
             =' '
-            a(href="/shoppingbasket") basket(#{basket_items_count})
+            a(href="/basket") basket(#{basket_count})
 
 
         form(name="searchbook", action="/books/search", method="get")
