Order confirmation and Order History

--- a/src/main/static/public/templates/index.jade
+++ b/src/main/static/public/templates/index.jade
@@ -5,6 +5,8 @@ html
     body
         p: span
             a(href="/basket") Basket(#{basket_count})
+            =' | '
+            a(href="/orders") Order History
 
 
         form(name="searchbook", action="/books/search", method="get")
