--- a/src/main/static/public/templates/bookdetails.jade
+++ b/src/main/static/public/templates/bookdetails.jade
@@ -22,3 +22,6 @@ html
             dt Price:
             dd='£' + book.price
 
+        div
+            a(href="/books/edit/#{book.id}") Change details
+
