--- a/src/main/static/public/templates/bookdetails.jade
+++ b/src/main/static/public/templates/bookdetails.jade
@@ -1,7 +1,7 @@
 !!! 5
 html
     head
-        title=pageName
+        title Book Details
     body
         div
             span
@@ -11,16 +11,16 @@ html
 
         dl
             dt Id:
-            dd=book.id
+            dd(id="book_id")=book.id
 
             dt Name:
-            dd=book.name
+            dd(id="book_name")=book.name
 
             dt Description:
-            dd=book.description
+            dd(id="book_description")=book.description
 
             dt Price:
-            dd='£' + book.price
+            dd(id="book_price")='£' + book.price
 
         div
             a(href="/books/edit/#{book.id}") Change details
