--- a/src/main/static/public/templates/index.jade
+++ b/src/main/static/public/templates/index.jade
@@ -1,7 +1,7 @@
 !!! 5
 html
     head
-        title=pageName
+        title Books
     body
         p: span
             a(href="/basket") Basket(#{basket_count})
