Tests fixed. New test: search books

--- a/src/main/static/public/templates/createbook.jade
+++ b/src/main/static/public/templates/createbook.jade
@@ -19,7 +19,7 @@ html
                 dt: span available
                 dd: input(id="book_availability", type="checkbox", checked, name="available")
             div
-                input(id="submit", type="submit", value="Add book")
+                input(id="submit_newbook", type="submit", value="Add book")
 
         div
             p: a(href="/books") Back to all books
