--- a/src/main/static/public/templates/orderconfirmation.jade
+++ b/src/main/static/public/templates/orderconfirmation.jade
@@ -1,7 +1,7 @@
 !!! 5
 html
     head
-        title=pageName
+        title Order Confirmation
     body
         div
             p: a(href="/") Home
@@ -11,4 +11,4 @@ html
                 span Thanks for your order. A confirmation email was sent to you.
 
         div
-            a(href="/orders") Order history
+            a(id="orders", href="/orders") Order history
